<resources>
    <string name="app_name">Calculator APP</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">\u00d7</string>
    <string name="btn_div">\u00f7</string>
    <string name="btn_point">.</string>
    <string name="btn_DEL">&lt;&lt;</string>
    <string name="btn_equal">=</string>
    <string name="btn_clear">C</string>

    <string name="result_def">0</string>

</resources>
